--- a/app/src/main/res/layout/activity_fragments.xml
+++ b/app/src/main/res/layout/activity_fragments.xml
@@ -1,16 +1,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <!-- Control Buttons -->
-
-    <!-- Swappable content -->
-
+    <!-- Title TextView -->
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="430dp"
+        android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginTop="24dp"
         android:background="@android:drawable/dialog_holo_dark_frame"
@@ -20,71 +17,66 @@
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Button Panel -->
     <LinearLayout
         android:id="@+id/buttonPanel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="7dp"
         android:orientation="horizontal"
         android:padding="16dp"
-        android:paddingHorizontal="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView12">
 
         <Button
             android:id="@+id/btnStatistics"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginHorizontal="8dp"
+            android:layout_weight="1"
             android:text="Statistics" />
 
         <Button
             android:id="@+id/btnPieChart"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginHorizontal="8dp"
+            android:layout_weight="1"
             android:text="Pie Chart" />
 
         <Button
             android:id="@+id/btnBarGraph"
-            android:layout_width="wrap_content"
+            android:layout_width="4dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginHorizontal="8dp"
+            android:layout_weight="1"
             android:text="Bar Graph" />
     </LinearLayout>
 
+    <!-- Content Fragment Container -->
     <FrameLayout
         android:id="@+id/contentFragmentContainer"
-        android:layout_width="427dp"
-        android:layout_height="480dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnGoToMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonPanel"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonPanel" />
 
+    <!-- Go To Menu Button -->
     <Button
         android:id="@+id/btnGoToMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="40dp"
         android:text="Go To Menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contentFragmentContainer" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
