--- a/app/src/main/res/layout/activity_fragments.xml
+++ b/app/src/main/res/layout/activity_fragments.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Button Panel -->
+    <!-- Buttons -->
     <LinearLayout
         android:id="@+id/buttonPanel"
         android:layout_width="0dp"
@@ -68,7 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonPanel" />
 
-    <!-- Go To Menu Button -->
+    <!-- Button to go to menu -->
     <Button
         android:id="@+id/btnGoToMenu"
         android:layout_width="wrap_content"
